fix: - removed gap - added margins

--- a/UI/sections/CaseProcess/styles/forex-trading-platform.scss
+++ b/UI/sections/CaseProcess/styles/forex-trading-platform.scss
@@ -5,6 +5,11 @@
     display: grid;
     grid-template-columns: repeat(2, auto);
     justify-content: space-between;
+    margin: 0 0 24px -24px;
+
+    & > div {
+      margin: 0 0 24px 24px;
+    }
 
     @include below-tablet {
       grid-template-columns: auto;
